--- a/style/component/button.css
+++ b/style/component/button.css
@@ -239,16 +239,17 @@
 
 /* 小按鈕 */
 .little-btn{
-    padding: 0 20px;
+    padding: 0 14px;
     line-height: 45px;
     text-decoration: none;
     border-radius: 30px;
     display: inline-block;
+    vertical-align: middle;
 }
 .little-btn span{
     color: var(--color-white);
     vertical-align: middle;
-    margin-right:6px 
+    /* margin-right:3px  */
 }
 
 .little-btn.yellow{
@@ -322,6 +323,21 @@ select{
     transform: translateY(-50%);
     cursor: pointer;
 }
+@media screen and (max-width: 1200px){
+    .little-btn.account-btn{
+        background-color: var(--color-neutral-800);
+        border: 1px solid var(--color-neutral-500);
+    }
+    .little-btn.account-btn:hover{
+        background-color: var(--color-accent-green-700);
+        border: 1px solid var(--color-accent-green-700);
+    }
+    .little-btn span{
+        color: var(--color-white);
+        vertical-align: middle;
+        /* margin-right:6px  */
+    }
+}
 @media screen and (max-width: 440px){
     .big-btn.light.pink:hover span{
         transform: translateX(0px);
@@ -332,4 +348,5 @@ select{
     .big-btn.light:hover span{
         transform: translateX(0px);
     }
+    
 }
