--- a/style/style-guideline.css
+++ b/style/style-guideline.css
@@ -39,9 +39,9 @@
     --font-main:"inter","serif", "arial";
     --font-eg: "livvic", "arial";
     --line-height-base: 150%;
-    --letter-spacing-ch: 2px;
-    --letter-spacing-btn: 0.12em;
-    --letter-spacing-num: 0.15em;
+    --letter-spacing-ch: .125rem;
+    --letter-spacing-btn: .12rem;
+    --letter-spacing-num: .1rem;
 }
 
 
@@ -120,15 +120,15 @@
 }
 .h3-ch-medium{
     font-weight:500; 
-    font-size: clamp(1.75rem, 1rem + 2vw, 2rem);
+    font-size: clamp(1.75rem, .75rem + 2vw, 2rem);
 }
 .h4-ch-medium{
     font-weight:500; 
-    font-size: clamp(1.5rem, 1rem + 1.75vw, 1.75rem);
+    font-size: clamp(1.5rem, .75rem + 1.75vw, 1.75rem);
 }
 .h5-ch-medium{
     font-weight:500;
-    font-size: clamp(1.25rem, 1rem + 1.5vw, 1.5rem);
+    font-size: clamp(1.25rem, .75rem + 1.5vw, 1.5rem);
 }
 
 /* Button Text */
@@ -173,12 +173,12 @@
 [class*="strong-number-"]{
     font-family: var(--font-eg);
     line-height: var(--line-height-base);
-    letter-spacing: var(--letter-soacing-num);
+    letter-spacing: var(--letter-spacing-num);
 }
 /* Strong Number */
 .strong-number-lg-blod{
     font-weight:700; 
-    font-size: clamp(1.5rem, 1rem + 2.5vw, 2.25rem);
+    font-size: clamp(1.5rem, 1.25rem + 2.5vw, 2.25rem);
 }
 .strong-number-sm-blod{
     font-weight:700; 
