--- a/style/layout/words.css
+++ b/style/layout/words.css
@@ -24,6 +24,14 @@
     text-overflow: ellipsis;
 }
 
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 300,
+    'GRAD' 0,
+    'opsz' 24
+}
+
 @media screen and (max-width: 810px){
     .medical .card .detail p:nth-child(3){
         -webkit-line-clamp: 2;
