--- a/style/page/tour-guide-page.css
+++ b/style/page/tour-guide-page.css
@@ -9,7 +9,7 @@
     width: 140px;
     height: 140px;
     border-radius: 80px;
-
+    cursor: pointer;
     display: flex;
     text-align: center;
     flex-direction: column;
